# corazy__arcade_game

./: .gitignore  README.md
backend/: README.md
backend/auth-server/coa-main-server/: .dockerignore  Dockerfile  README.md  build.gradle  (+3 more)
backend/compile-server/coa-compile-server/: .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  INTEGRATION_TEST.md  README.md  pyproject.toml  requirements.txt  test_websocket.html  test_websocket.py  test_websocket_fixed_uuid.py
backend/compile-server/coa-compile-server/app/: __init__.py  main.py
backend/compile-server/coa-compile-server/app/api/routes/: __init__.py  algorithm.py  problem.py
backend/compile-server/coa-compile-server/app/core/: __init__.py  config.py  database.py  rabbitmq.py  redis_pubsub.py  s3.py
backend/compile-server/coa-compile-server/app/repository/: base.py  problem_repository.py
backend/compile-server/coa-compile-server/app/schemas/: __init__.py  algorithm.py  algorithm_model.py  problem.py  problem_info.py  programming_language.py  websocket.py
backend/compile-server/coa-compile-server/app/services/: queue_service.py  websocket_service.py
backend/snippet-server/: docker-compose.yml
exec/: README.md
frontend/: .gitignore  README.md
frontend/.vercel/: project.json
frontend/frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TEMP_mp.txt  TEMP_mp_before.txt  components.json  docker-compose.yml  eslint.config.js  index.html  nginx-ssl.conf  nginx-ssl.conf.backup  nginx.conf  package-lock.json  package.json  vite.config.js
infra/message-setting/: README.md
(+329 files in other folders)
