[project]
name = "coa-compile-server"
version = "1.0.0"
description = "코드 컴파일 및 실행 서버 - FastAPI 기반"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # FastAPI 핵심 패키지
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    # Database (MySQL)
    "databases[mysql]==0.9.0",
    "aiomysql==0.2.0",
    # Redis
    "redis==5.0.1",
    # RabbitMQ
    "aio-pika==9.3.1",
    # AWS S3
    "boto3==1.34.24",
    # Docker SDK
    "docker==7.0.0",
    # 유틸리티
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "starlette>=0.35.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
